--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>The Glacier</title>
     <link rel="stylesheet" href="/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Squada+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   </head>  
   <body>
     <div class="page_boundary">
@@ -17,7 +18,24 @@
         Zell am See &#183 Kaprun
       </div>
       <div class="bottom_half">
-        <div class="left_content"></div>
+        <div class="left_content">
+          <p>Activities</p>
+          <ul>
+            <li>Skiing</li>
+            <li>Snowboarding</li>
+            <li>Hiking</li>
+            <li>Riding</li>
+            <li>Sightseeing</li>
+          </ul>
+          <p style="padding-top: 10px;">Amenities</p>
+          <ul style="margin-bottom: 0; padding-bottom: 60px;">
+            <li>Alpine Huts</li>
+            <li>Restaurants</li>
+            <li>Freeride Pistes</li>
+            <li>Ice Camps</li>
+            <li>Snowparks</li>
+          </ul>
+        </div>
         <div class="right_content"></div>
       </div>
     </div>
