--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <li>Sightseeing</li>
           </ul>
           <p style="padding-top: 10px;">Amenities</p>
-          <ul style="margin-bottom: 0; padding-bottom: 60px;">
+          <ul style="margin-bottom: 0; padding-bottom: 78px;">
             <li>Alpine Huts</li>
             <li>Restaurants</li>
             <li>Freeride Pistes</li>
@@ -36,7 +36,14 @@
             <li>Snowparks</li>
           </ul>
         </div>
-        <div class="right_content"></div>
+        <div class="right_content">
+          <h3>Kitzsteinhorn <img src="bullet_image.png"> Glacier ski & sightseeing in Kaprun, Austria</h3>
+          <p>Feel unlimited freedom on wide glacier slopes in natural snow at the <br><span style="color: #144063; font-weight: bold;">Kitzsteinhorn</span> - and this from autumn already! <strong>100% snow-reliability</strong>, <br>many freeride routes, snow parks and programmes for ski tourers <br>and cross-country skiers make the glacier ski resort an incredibly <br>diverse destination for all winter sportsmen and women.</p>
+          <p>The <span style="color: #144063; font-weight: bold;">Maiskogel</span> is the <strong>central family mountain</strong> of the destination. <br>You get to the gentle wide slopes of the Maiskogel directly from <br>Kaprun and enjoy leisurely days of skiing with quaint huts. <br>Beginners and children start at the <span style="color: #144063; font-weight: bold;">Lechnerberg</span> - the <strong>beginners' <br>area</strong> for skiers and snowboarders.</p>
+
+        <h4>Contact us at +43 6547 8700</h4>
+        <h5>www.kitzsteinhorn.at/en</h5>
+        </div>
       </div>
     </div>
   </body>
